objects/Joint_Business_Plan_Contact_Role__c.object
<CustomObject>
    <description>R5 - Joint Business Plan Contact Role</description>
    <fields>
        <fullName>ABB_Perspective_Role__c</fullName>
        <description>R5 - ABB Perspective Role</description>
        <label>Role from ABB Perspective</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan_Status__c</fullName>
        <formula>IF ( (TEXT(Joint_Business_Plan__r.Status__c) == &apos;Closed&apos; || TEXT(Joint_Business_Plan__r.Status__c) == &apos;Obsolete&apos;), &apos;Closed&apos;, TEXT(Joint_Business_Plan__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Business Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>R5 - Contact Name</description>
        <formula>Contact__r.FirstName  &amp; &apos; &apos; &amp;  Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <formula>Contact__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>R5 - Master-Detail Relationship with Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Channel Partner Contact Roles</relationshipLabel>
        <relationshipName>Joint_Business_Plan_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_User_Type__c</fullName>
        <description>Created as part of R2.0 to hold partner owner type</description>
        <globalPicklist>External_User_Type</globalPicklist>
        <label>External User Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_User__c</fullName>
        <description>Created as part of R8 Channel Partner management</description>
        <formula>Joint_Business_Plan__r.External_User__c</formula>
        <label>External User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filled_fields_count__c</fullName>
        <description>R6</description>
        <formula>If(ISBLANK(Product_Lines_Sub__c),0,1) + If(ISBLANK(TEXT(ABB_Perspective_Role__c)),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filled fields count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <description>R5 - Master-Detail Relationship with Joint Business Plan.</description>
        <label>Channel Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipName>Joint_Business_Plan_Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lines_Sub__c</fullName>
        <label>Product Lines (Sub)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lines__c</fullName>
        <description>R5 - Concatenate all the products of particular contact.</description>
        <label>Product Lines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>It Is created for X-Author</description>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Contact_Check__c</fullName>
        <description>R5 - Unique Contact Check</description>
        <label>Unique Contact Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>of_Completeness__c</fullName>
        <description>R6: To calculate % of completeness by number of  filled fields and total editable fields</description>
        <formula>IF (Filled_fields_count__c == 0, 0, Filled_fields_count__c / ( VALUE($Label.Sys_Total_Fields_in_Contact_Roles) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Channel Partner Contact Roles</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP-CONTACT-{0000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Partner Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>JBP_Status_Closed_Check_ContactRoles</fullName>
        <active>true</active>
        <description>R5 - If Channel Partner Business Plan Status is Closed/Obsolete, then the user should not edit the Channel Partner Contact Role</description>
        <errorConditionFormula>OR(ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Closed&apos;), 
ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Obsolete&apos;) 
)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Plan is Closed</errorMessage>
    </validationRules>
</CustomObject>